# kalman-project

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
examples/: run_1d.py
experiments/: 1d_exp1_basic_demo.py  1d_exp2_measurement_noise.py
src/kalman_demo/: kalman.py  metrics.py
src/kalman_demo/data_generators/: synthetic_1d.py
src/kalman_demo/models/: models_1d.py
src/kalman_demo/visualizers/: viz_1d.py
