[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "kalman-demo"
version = "0.1.0"
description = "Educational Kalman filter implementation with synthetic data and visualizations"
readme = "README.md"
requires-python = ">=3.11,<3.13"
license = { text = "MIT" }

dependencies = [
    "numpy>=1.26",
    "matplotlib>=3.8",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.2",
    "mypy>=1.8",
    "pre-commit>=3.7",
]

notebooks = [
    "jupyterlab>=4.1",
]

gpu = [
    "cupy-cuda12x; platform_system == 'Windows'",
]

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff.lint]
select = ["E", "F", "W"]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true
